--- a/assets/style.css
+++ b/assets/style.css
@@ -5,9 +5,37 @@ header {
 
 body {
     text-align: center;
+    background-color: rgb(0, 192, 26);
 }
 
+#intro {
+    background-color: rgb(0, 4, 255);
+}
+
+#title {
+    color: rgb(255, 49, 49);
+}
 
 .hideClass {
     display: none;
+}
+
+button {
+    padding: 5px;
+    font-size: 17px;
+    background-color: lightblue;
+}
+
+#choices {
+    display: grid;
+    padding: 20px;
+
+}
+
+h1 {
+    font-size: 50px;
+}
+
+#nameScore {
+    font-size: 50px;
 }
